# ToolBox

./: .gitignore  LICENSE  main.py  pyproject.toml  resource.qrc  resource_rc.py
style/: lib_replace.qss  lib_replace_content.qss  lib_replace_directory.qss  lib_replace_project_creater.qss
ui/: __init__.py  home_ui.py  lib_replace.ui  lib_replace_content_ui.py  lib_replace_directory.ui  lib_replace_directory_ui.py  lib_replace_project_creater.ui  lib_replace_project_creater_ui.py  lib_replace_ui.py
utils/: module_resolver.py  ssh_worker.py  tasks.py
window/: __init__.py  gallery.py  home.py  lib_replace.py  lib_replace_content.py  lib_replace_directory.py  lib_replace_project_creater.py
