[project]
name = "toolbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "PySide6-Fluent-Widgets[full]>=1.11.1,<1.11.2",
    "fsspec>=2024.0.0",
    "paramiko"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["toolbox*", "ui*", "window*"]